Adicionado mudancas